fix row and container stretching.

--- a/src/app/grid/grid.component.css
+++ b/src/app/grid/grid.component.css
@@ -23,10 +23,15 @@
 #grid-container {
   background-color: #00b3b4;
   max-width: 1010px;
+  max-height: 1010px;
   border: 5px solid #404040;
   margin-top: 10px;
 }
 
 #replay{
   float: right;
+}
+
+.row {
+  max-height: 100px;
 }
